@@ -194,10 +194,6 @@
 		.ONPHP_MAIN_PATH.'Utils'.DIRECTORY_SEPARATOR.'Archivers'.PATH_SEPARATOR
 		
 		.ONPHP_META_CLASSES.PATH_SEPARATOR
-		
-		// uncomment this one, if your php compiled without spl extension:
-		//
-		// .ONPHP_CORE_PATH.'SPL'.DIRECTORY_SEPARATOR.'bundled'.PATH_SEPARATOR
 	);
 	
 	if (!defined('ONPHP_CLASS_CACHE'))
